--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,8 +30,9 @@ border-radius: 25px;
 html, body{
   height: 100%;
   width: 100%;
-  font-family: 'Poppins', sans-serif;
+  /* font-family: 'Poppins', sans-serif; */
   color: #222;
+  font-family: 'Special Elite', cursive;
   
 }
 .navbar {
@@ -56,11 +57,11 @@ html, body{
   align-items: center;
 
 }
-.parrallax2 h1 {
+/* .parrallax2 h1 {
   color: pink;
   font-weight: bold;
   padding-bottom: 5vh ;
-}
+} */
 
 .bold-link {
   color: white;
@@ -72,7 +73,7 @@ html, body{
   border-radius: 10px;
 }
  
-.carousel-inner img {
+/* .carousel-inner img {
   width: 100%;
   height: 100%;
 }
@@ -91,10 +92,11 @@ text-shadow: 1px 1px 10px #000;
   font-weight: 500;
   text-shadow: 1px 1px 10px #000;
   padding-bottom: 1rem;
-  } 
+  }  */
   .btn-primary {
-    background-color: rgb(25, 78, 25);
-    border: 1px solid rgb(25, 78, 25);
+    background-color: black;
+    border: 3px ridge white;
+    color: white;
   }
   .btn-primary:hover {
     background-color:rgb(9, 63, 9);
@@ -119,7 +121,7 @@ text-shadow: 1px 1px 10px #000;
     margin-bottom: 1rem;
   }
   footer{
-    background-color: rgb(90, 81, 81);
+    background-color: black !important;
     color: #d5d5d5;
     padding-top: 2rem;
   }
@@ -166,10 +168,9 @@ text-shadow: 1px 1px 10px #000;
   .ml4 {
     position: relative;
     font-weight: 900;
-    font-size: 4.5em;
+    font-size: 1.5em;
   }
   .ml4 .letters {
-    position: absolute;
     margin: auto;
     left: 0;
     top: 0.3em;
@@ -180,6 +181,9 @@ text-shadow: 1px 1px 10px #000;
     height: 200px;
     width: 200px;
     border-radius: 50%;
+    border: dotted black;
+    align-self: center;
+    margin-top: 10px;
     
   }
 
@@ -188,6 +192,7 @@ text-shadow: 1px 1px 10px #000;
    color: white !important;
 }
 
-
-
-
+h5.background {
+background-color: black;
+padding: 2px;
+}
