add/delete class functionality for student view

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,6 +30,11 @@
 
 <body>
     {{{ body }}}
+
+
+    <script type="text/javascript" src="./js/class.js"></script>
+    <script type="text/javascript" src="./js/instructor.js"></script>
+    <script type="text/javascript" src="./js/student.js"></script>
 </body>
 
 </html>
