student add and delete class func works

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,8 +21,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <link rel="stylesheet" href="stylesheets/style.css">
-    <link href="stylesheets/instructor.css" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/instructor.css">
     <script
         src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
 
@@ -33,9 +33,9 @@
     {{{ body }}}
 
 
-    <script type="text/javascript" src="./js/class.js"></script>
-    <script type="text/javascript" src="./js/instructor.js"></script>
-    <script type="text/javascript" src="./js/student.js"></script>
+    <script type="text/javascript" src="/js/class.js"></script>
+    <script type="text/javascript" src="/js/instructor.js"></script>
+    <script type="text/javascript" src="/js/student.js"></script>
 </body>
 
 </html>
